--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
   "homepage": "https://github.com/doolse/react-typed-form#readme",
   "devDependencies": {
     "lerna": "^3.20.2",
-    "typescript": "^3.8.3"
-  }
+    "typescript": "^3.8.3",
+    "@date-io/date-fns": "^2.6.1",
+    "@material-ui/core": "^4.9.12",
+    "@material-ui/pickers": "^3.2.10",
+    "@types/react": "^16.9.34",
+    "yalc": "^1.0.0-pre.35"
+  },
+  "dependencies": {}
 }
