--- a/packages/mui/package.json
+++ b/packages/mui/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "yalc": "tsc && yalc publish --push"
   },
   "repository": {
     "type": "git",
@@ -17,21 +18,12 @@
     "url": "https://github.com/doolse/react-typed-form/issues"
   },
   "homepage": "https://github.com/doolse/react-typed-form#readme",
-  "devDependencies": {
-    "@date-io/date-fns": "^2.6.1",
-    "@material-ui/core": "^4.9.12",
-    "@material-ui/pickers": "^3.2.10",
-    "@types/react": "^16.9.34",
-    "lerna": "^3.20.2",
-    "typescript": "^3.8.3"
-  },
   "dependencies": {
     "@react-typed-form/core": "^1.0.0-alpha.0"
   },
   "peerDependencies": {
     "@date-io/date-fns": "^2.6.1",
     "@material-ui/core": "^4.9.12",
-    "@material-ui/pickers": "^3.2.10",
-    "react": "^16.13.1"
+    "@material-ui/pickers": "^3.2.10"
   }
 }
