--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
+  "private": true,
   "name": "react-typed-form",
+  "workspaces": [
+    "packages/*"
+  ],
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "docs": "typedoc --out docs"
   },
   "repository": {
     "type": "git",
@@ -22,6 +26,7 @@
     "@material-ui/pickers": "^3.2.10",
     "@types/react": "^16.9.34",
     "lerna": "^3.20.2",
+    "typedoc": "^0.19.2",
     "typescript": "^3.9.3",
     "yalc": "^1.0.0-pre.35"
   }
