--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -7,8 +7,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "yalc": "tsc && yalc publish --push",
-    "run": "parcel index.html"
+    "start": "tsc && node ../../dist/examples/server.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +21,11 @@
   "homepage": "https://github.com/doolse/react-typed-form#readme",
   "dependencies": {
     "@react-typed-form/core": "1.0.0-alpha.0",
+    "@types/express": "^4.17.9",
+    "@types/parcel-bundler": "^1.12.1",
     "@types/react-router-dom": "^5.1.6",
+    "express": "^4.17.1",
+    "parcel-bundler": "^1.12.4",
     "react": "latest",
     "react-dom": "latest",
     "react-router-dom": "^5.2.0"
