--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-typed-form/example",
+  "name": "@react-typed-forms/example",
   "private": true,
   "version": "1.0.0-alpha.0",
   "description": "",
@@ -11,28 +11,28 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/doolse/react-typed-form.git"
+    "url": "git+https://github.com/doolse/react-typed-forms.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/doolse/react-typed-form/issues"
+    "url": "https://github.com/doolse/react-typed-forms/issues"
   },
-  "homepage": "https://github.com/doolse/react-typed-form#readme",
+  "homepage": "https://github.com/doolse/react-typed-forms#readme",
   "dependencies": {
-    "@react-typed-form/core": "1.0.0-alpha.0",
-    "@types/express": "^4.17.9",
-    "@types/parcel-bundler": "^1.12.1",
-    "@types/react-router-dom": "^5.1.6",
+    "@react-typed-forms/core": "1.0.0-alpha.0",
     "express": "^4.17.1",
     "parcel-bundler": "^1.12.4",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
+    "@types/react": "^16.8.0",
+    "@types/react-dom": "^16.8.0",
+    "@types/express": "^4.17.9",
+    "@types/parcel-bundler": "^1.12.1",
+    "@types/react-router-dom": "^5.1.6",
     "parcel": "latest"
   }
 }
