--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@react-typed-forms/example",
   "private": true,
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/doolse/react-typed-forms#readme",
   "dependencies": {
-    "@react-typed-forms/core": "1.0.0-alpha.0",
+    "@react-typed-forms/core": "^1.0.0",
     "express": "^4.17.1",
     "parcel-bundler": "^1.12.4",
     "react": "^16.8.0",
@@ -28,10 +28,10 @@
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "@types/react": "^16.8.0",
-    "@types/react-dom": "^16.8.0",
     "@types/express": "^4.17.9",
     "@types/parcel-bundler": "^1.12.1",
+    "@types/react": "^16.8.0",
+    "@types/react-dom": "^16.8.0",
     "@types/react-router-dom": "^5.1.6",
     "parcel": "latest"
   }
