--- a/packages/mui/package.json
+++ b/packages/mui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-typed-forms/mui",
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/doolse/react-typed-forms#readme",
   "dependencies": {
-    "@react-typed-forms/core": "1.0.0-alpha.0"
+    "@react-typed-forms/core": "^1.0.0"
   },
   "peerDependencies": {
     "@date-io/date-fns": "^1.3.13",
