--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,6 +18,9 @@
     "url": "https://github.com/doolse/react-typed-forms/issues"
   },
   "homepage": "https://github.com/doolse/react-typed-forms#readme",
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "react": "^16.8.0",
     "react-dom": "^16.8.0"
