--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "docs": "typedoc --stripInternal --out docs"
-  },
+    "docs": "typedoc --stripInternal --out docs",
+    "prepack": "lerna run build"
+  },  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/doolse/react-typed-forms.git"
