--- a/packages/mui/package.json
+++ b/packages/mui/package.json
@@ -28,5 +28,11 @@
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "4.9.12",
     "@material-ui/pickers": "^3.2.10"
-  }
+  },
+  "devDependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "4.9.12",
+    "@material-ui/pickers": "^3.2.10"
+  },
+  "gitHead": "29073ffec049a1dfb0a53975be838f573e8e4a2e"
 }
