--- a/packages/mui/package.json
+++ b/packages/mui/package.json
@@ -26,7 +26,7 @@
   },
   "peerDependencies": {
     "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "4.9.12",
+    "@material-ui/core": "^4.9.12",
     "@material-ui/pickers": "^3.2.10"
   },
   "devDependencies": {
