--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "typedoc": "^0.19.2",
+    "typedoc-plugin-markdown": "^3.1.1",
     "typescript": "^3.9.3",
     "yalc": "^1.0.0-pre.35"
   }
