--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "react-dom": "^16.8.0",
     "typedoc": "^0.19.2",
     "typedoc-plugin-markdown": "^3.1.1",
-    "typescript": "^3.9.3",
-    "yalc": "^1.0.0-pre.35"
+    "typescript": "^3.9.3"
   }
 }
