--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm i -g lerna
+    - run: npm i -g lerna wait-on
     - run: lerna bootstrap
     - run: lerna run build
+    - run: cd packages/examples && npm run start & wait-on http://localhost:1234
+    - run: npx cypress run
+    
