--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
   },
   "homepage": "https://github.com/doolse/react-typed-forms#readme",
   "devDependencies": {
+    "cypress": "^6.3.0",
     "lerna": "^3.20.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "typedoc": "^0.19.2",
     "typedoc-plugin-markdown": "^3.1.1",
-    "typescript": "^3.9.3"
+    "typescript": "^4.1.2"
   }
 }
