--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "yalc": "tsc && yalc publish --push"
+    "clean": "rm -rf dist"
   },
   "repository": {
     "type": "git",
