--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -7,7 +7,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "start": "tsc && node ../../dist/examples/server.js"
+    "start": "ts-node src/server.ts",
+    "clean": "rm -rf dist lib .cache"
   },
   "repository": {
     "type": "git",
