--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "./lib",
     "jsx": "react"
   },
   "include": [
     "./src"
-  ]
- }
+  ],
+  "exclude": ["./dist"]
+}
