--- a/packages/mui/tsconfig.json
+++ b/packages/mui/tsconfig.json
@@ -1,13 +1,9 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "outDir": "dist",
-    "declaration": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "jsx": "react",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true
-  }
-}
+    "outDir": "./dist"
+  },
+  "include": [
+    "./src"
+  ]
+ }
