--- a/packages/mui/package.json
+++ b/packages/mui/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/doolse/react-typed-forms.git"
   },
-  "author": "",
+  "author": "Jolse Maginnis",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/doolse/react-typed-forms/issues"
@@ -21,6 +21,12 @@
   "publishConfig": {
     "access": "public"
   },
+  "keywords": [
+    "react",
+    "typescript",
+    "forms",
+    "material-ui"
+  ],
   "dependencies": {
     "@react-typed-forms/core": "^1.2.0"
   },
