--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/doolse/react-typed-forms#readme",
   "dependencies": {
     "@react-typed-forms/core": "^1.2.0",
+    "@react-typed-forms/mui": "^1.2.0",
     "express": "^4.17.1",
     "parcel-bundler": "^1.12.4",
     "react": "^16.8.0",
