--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,8 +27,8 @@
     "forms"
   ],
   "peerDependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react": "^16.8.0 || ^17",
+    "react-dom": "^16.8.0 || ^17"
   },
   "devDependencies": {
     "react": "^16.8.0",
