--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "main": "index.js",
   "scripts": {
     "docs": "typedoc --stripInternal --out docs",
-    "prepack": "lerna run build",
+    "prepack": "lerna run clean && lerna run build",
     "build": "lerna run build",
-    "start": "lerna run start --stream"
+    "dev": "npm run build && lerna run dev --stream",
+    "cypress-dev": "npm run dev & cypress open"
   },
   "repository": {
     "type": "git",
@@ -26,11 +27,12 @@
   "devDependencies": {
     "cypress": "^6.3.0",
     "lerna": "^3.20.2",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "ts-node": "^9.1.1",
-    "typedoc": "^0.19.2",
-    "typedoc-plugin-markdown": "^3.1.1",
+    "next": "10.0.6",
+    "next-transpile-modules": "^6.3.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "typedoc": "^0.20.0",
+    "typedoc-plugin-markdown": "^3.4.5",
     "typescript": "^4.1.2"
   }
 }
