--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,6 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "watch": "tsc -w",
     "clean": "rm -rf dist"
   },
   "repository": {
@@ -30,13 +31,5 @@
     "react": "^16.8.0 || ^17",
     "react-dom": "^16.8.0 || ^17"
   },
-  "devDependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
-  },
-  "gitHead": "40250b2b5d1bd4c5f355edcb3b5f39353298eb5d",
-  "dependencies": {
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10"
-  }
+  "gitHead": "40250b2b5d1bd4c5f355edcb3b5f39353298eb5d"
 }
