--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -3,12 +3,9 @@
   "private": true,
   "version": "1.2.2",
   "description": "",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "start": "ts-node src/server.ts",
-    "clean": "rm -rf dist lib .cache"
+    "dev": "next dev",
+    "clean": "rm -rf .next"
   },
   "repository": {
     "type": "git",
@@ -21,20 +18,10 @@
   },
   "homepage": "https://github.com/doolse/react-typed-forms#readme",
   "dependencies": {
-    "@react-typed-forms/core": "^1.2.2",
-    "@react-typed-forms/mui": "^1.2.2",
-    "express": "^4.17.1",
-    "parcel-bundler": "^1.12.4",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "react-router-dom": "^5.2.0"
+    "@react-typed-forms/core": "1.2.2",
+    "@react-typed-forms/mui": "1.2.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.9",
-    "@types/parcel-bundler": "^1.12.1",
-    "@types/react": "^16.8.0",
-    "@types/react-dom": "^16.8.0",
-    "@types/react-router-dom": "^5.1.6",
-    "parcel": "latest"
+    "@types/react": "17.0.1"
   }
 }
