--- a/packages/mui/package.json
+++ b/packages/mui/package.json
@@ -6,6 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "watch": "tsc -w",
     "clean": "rm -rf dist"
   },
   "repository": {
@@ -37,7 +38,7 @@
   },
   "devDependencies": {
     "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "4.9.12",
+    "@material-ui/core": "^4.9.12",
     "@material-ui/pickers": "^3.2.10"
   },
   "gitHead": "40250b2b5d1bd4c5f355edcb3b5f39353298eb5d"
