--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "scripts": {
     "dev": "next dev",
-    "clean": "rm -rf .next"
+    "clean": "rm -rf .next",
+    "build": "next build"
   },
   "repository": {
     "type": "git",
