--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lerna": "^3.20.2",
     "next": "10.2",
     "next-transpile-modules": "^6.3.0",
+    "prettier": "^2.3.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "typedoc": "^0.20.0",
