--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "prettier": "^2.3.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "typedoc": "^0.20.0",
+    "typedoc": "^0.22.11",
     "typedoc-plugin-markdown": "^3.4.5",
-    "typescript": "^4.1.2"
+    "typescript": "4.5.5"
   }
 }
