--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -13,8 +13,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react",
-    "outDir": "dist"
+    "outDir": "lib"
   },
   "include": ["src/*.ts", "src/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "lib"]
 }
