--- a/packages/mui/package.json
+++ b/packages/mui/package.json
@@ -2,12 +2,10 @@
   "name": "@react-typed-forms/mui",
   "version": "2.5.10",
   "description": "",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "clean": "rm -rf dist"
+    "build": "rimraf ./lib/ && tsc"
   },
   "repository": {
     "type": "git",
@@ -37,6 +35,8 @@
     "@material-ui/pickers": "^3.2.10"
   },
   "devDependencies": {
+    "@types/react": "^17.0.39",
+    "rimraf": "^3.0.2",
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.9.12",
     "@material-ui/pickers": "^3.2.10"
