--- a/packages/mui/tsconfig.json
+++ b/packages/mui/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "outDir": "dist",
+    "outDir": "lib",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -16,5 +16,5 @@
     "jsx": "react"
   },
   "include": ["src/*.ts", "src/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "lib"]
 }
