--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "scripts": {
     "dev": "next dev",
-    "cypress": "next dev"
+    "cypress": "next dev",
+    "build": "next build"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,11 @@
     "next": "^12.1.5",
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.9.12",
-    "@material-ui/pickers": "^3.2.10"
+    "@material-ui/pickers": "^3.2.10",
+    "@next/mdx": "^12.1.5",
+    "@mdx-js/loader": "^2.1.1",
+    "raw-loader": "~4.0.2",
+    "prism-react-renderer": "^1.3.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.39",
