--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -20,8 +20,6 @@
   },
   "homepage": "https://github.com/doolse/react-typed-forms#readme",
   "dependencies": {
-    "@react-typed-forms/core": "^2.5.10",
-    "@react-typed-forms/mui": "^2.5.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "next": "^12.1.5",
@@ -31,7 +29,9 @@
     "@next/mdx": "^12.1.5",
     "@mdx-js/loader": "^2.1.1",
     "raw-loader": "~4.0.2",
-    "prism-react-renderer": "^1.3.1"
+    "prism-react-renderer": "^1.3.1",
+    "@react-typed-forms/core": "workspace:*",
+    "@react-typed-forms/mui": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^17.0.39",
