--- a/packages/mui/package.json
+++ b/packages/mui/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "rimraf ./lib/ && tsc"
+    "build": "rimraf ./lib/ && tsc",
+    "watch": "tsc -w"
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,7 @@
     "material-ui"
   ],
   "dependencies": {
-    "@react-typed-forms/core": "^2.5.10"
+    "@react-typed-forms/core": "workspace:*"
   },
   "peerDependencies": {
     "@date-io/date-fns": "^1.3.13",
