--- a/packages/mui/package.json
+++ b/packages/mui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-typed-forms/mui",
-  "version": "2.5.10",
+  "version": "2.5.11",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -36,11 +36,11 @@
     "@material-ui/pickers": "^3.2.10"
   },
   "devDependencies": {
-    "@types/react": "^17.0.39",
-    "rimraf": "^3.0.2",
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.9.12",
-    "@material-ui/pickers": "^3.2.10"
+    "@material-ui/pickers": "^3.2.10",
+    "@types/react": "^17.0.39",
+    "rimraf": "^3.0.2"
   },
   "gitHead": "698e16cd3ab31b7dd0528fc76536f4d3205ce8c6"
 }
