--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -20,22 +20,22 @@
   },
   "homepage": "https://github.com/doolse/react-typed-forms#readme",
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "next": "^12.1.5",
-    "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.9.12",
-    "@material-ui/pickers": "^3.2.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "next": "^12.3.1",
     "@next/mdx": "^12.1.5",
     "@mdx-js/loader": "^2.1.1",
     "raw-loader": "~4.0.2",
-    "prism-react-renderer": "^1.3.1",
+    "prism-react-renderer": "^1.3.5",
+    "@mui/material": "^5",
+    "@emotion/styled": "^11.10.4",
+    "@emotion/react": "^11.10.4",
     "@react-typed-forms/core": "workspace:*",
     "@react-typed-forms/mui": "workspace:*"
   },
   "devDependencies": {
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^18.0.22",
+    "@types/react-dom": "^18.0.7",
     "@types/node": "^16.11.27",
     "typescript": "^4.8.3",
     "next-transpile-modules": "^9.0.0"
