--- a/packages/mui/package.json
+++ b/packages/mui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-typed-forms/mui",
-  "version": "3.0.0-dev.33",
+  "version": "3.0.0-dev.35",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -31,15 +31,13 @@
     "@react-typed-forms/core": "workspace:*"
   },
   "peerDependencies": {
-    "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.9.12",
-    "@material-ui/pickers": "^3.2.10"
+    "@mui/material": "^5"
   },
   "devDependencies": {
-    "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.9.12",
-    "@material-ui/pickers": "^3.2.10",
-    "@types/react": "^17.0.39",
+    "@mui/material": "^5",
+    "@types/react": "^18.0.22",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rimraf": "^3.0.2"
   },
   "gitHead": "698e16cd3ab31b7dd0528fc76536f4d3205ce8c6"
