--- a/packages/mui/package.json
+++ b/packages/mui/package.json
@@ -1,44 +1,44 @@
 {
-  "name": "@react-typed-forms/mui",
-  "version": "3.0.0-dev.42",
-  "description": "",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "scripts": {
-    "build": "rimraf ./lib/ && tsc",
-    "watch": "tsc -w"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/doolse/react-typed-forms.git"
-  },
-  "author": "Jolse Maginnis",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/doolse/react-typed-forms/issues"
-  },
-  "homepage": "https://github.com/doolse/react-typed-forms#readme",
-  "publishConfig": {
-    "access": "public"
-  },
-  "keywords": [
-    "react",
-    "typescript",
-    "forms",
-    "material-ui"
-  ],
-  "dependencies": {
-    "@react-typed-forms/core": "workspace:*"
-  },
-  "peerDependencies": {
-    "@mui/material": "^5"
-  },
-  "devDependencies": {
-    "@mui/material": "^5",
-    "@types/react": "^18.0.22",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rimraf": "^3.0.2"
-  },
-  "gitHead": "698e16cd3ab31b7dd0528fc76536f4d3205ce8c6"
+	"name": "@react-typed-forms/mui",
+	"version": "3.0.0-dev.43",
+	"description": "",
+	"main": "lib/index.js",
+	"types": "lib/index.d.ts",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/doolse/react-typed-forms.git"
+	},
+	"author": "Jolse Maginnis",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/doolse/react-typed-forms/issues"
+	},
+	"homepage": "https://github.com/doolse/react-typed-forms#readme",
+	"publishConfig": {
+		"access": "public"
+	},
+	"keywords": [
+		"react",
+		"typescript",
+		"forms",
+		"material-ui"
+	],
+	"dependencies": {
+		"@react-typed-forms/core": "3.0.0-dev.43"
+	},
+	"peerDependencies": {
+		"@mui/material": "^5"
+	},
+	"devDependencies": {
+		"@mui/material": "^5",
+		"@types/react": "^18.0.22",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"rimraf": "^3.0.2"
+	},
+	"gitHead": "698e16cd3ab31b7dd0528fc76536f4d3205ce8c6",
+	"scripts": {
+		"build": "rimraf ./lib/ && tsc",
+		"watch": "tsc -w"
+	}
 }
