fields and elements are back

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-typed-forms/core",
-  "version": "3.0.0-dev.60",
+  "version": "3.0.0-dev.62",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -38,7 +38,7 @@
     "react-dom": "^16.8.0 || ^17 || ^18"
   },
   "devDependencies": {
-    "typescript": "^4.8.3",
+    "typescript": "4.9.3",
     "@types/react": "^18.0.22",
     "rimraf": "^3.0.2"
   },
