--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "cypress": "next dev",
     "build": "next build",
-    "export": "next export"
+    "export": "next export",
+    "tsc": "tsc --build --verbose"
   },
   "repository": {
     "type": "git",
@@ -37,7 +38,7 @@
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@types/node": "^16.11.27",
-    "typescript": "^4.8.3",
+    "typescript": "4.9.3",
     "next-transpile-modules": "^9.0.0"
   }
 }
