--- a/SchemaGen/SchemaGen.csproj
+++ b/SchemaGen/SchemaGen.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
         <PackageReference Include="NSwag.AspNetCore" Version="13.18.2" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.13" />
+        <PackageReference Include="NJsonSchema.CodeGeneration.CSharp" Version="10.8.0"/>
     </ItemGroup>
 
 </Project>
