--- a/packages/schemas-mui/package.json
+++ b/packages/schemas-mui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-typed-forms/schemas-mui",
-  "version": "3.0.0-dev.83",
+  "version": "1.0.0",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -24,8 +24,8 @@
     "material-ui"
   ],
   "dependencies": {
-    "@react-typed-forms/core": "workspace:*",
-    "@react-typed-forms/mui": "workspace:*",
+    "@react-typed-forms/core": "^3.0.0-dev",
+    "@react-typed-forms/mui": "^3.0.0-dev",
     "@react-typed-forms/schemas": "workspace:*",
     "date-fns": "^2.29.3"
   },
