--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -24,7 +24,7 @@
     "material-ui"
   ],
   "dependencies": {
-    "@react-typed-forms/core": "^3.0.0-dev"
+    "@react-typed-forms/core": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
