--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-typed-forms/schemas",
-  "version": "1.0.0",
+  "version": "3.0.0-dev.84",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
