--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "^12.3.1",
+    "next": "13.4.7",
     "@next/mdx": "^12.1.5",
     "@mdx-js/loader": "^2.1.1",
     "raw-loader": "~4.0.2",
