--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "13.4.7",
+    "next": "13.5.4",
     "@next/mdx": "^12.1.5",
     "@mdx-js/loader": "^2.1.1",
     "raw-loader": "~4.0.2",
@@ -40,7 +40,6 @@
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@types/node": "^16.11.27",
-    "typescript": "4.9.3",
-    "next-transpile-modules": "^9.0.0"
+    "typescript": "4.9.3"
   }
 }
