--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-typed-forms/core",
-  "version": "3.0.0-dev.106",
+  "version": "3.0.0-dev.107",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -35,8 +35,7 @@
     "forms"
   ],
   "peerDependencies": {
-    "react": "^16.8.0 || ^17 || ^18",
-    "react-dom": "^16.8.0 || ^17 || ^18"
+    "react": "^18"
   },
   "devDependencies": {
     "typescript": "4.9.3",
