--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-typed-forms/core",
-  "version": "3.0.0-dev.107",
+  "version": "3.0.0-dev.108",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -34,12 +34,12 @@
     "typescript",
     "forms"
   ],
-  "peerDependencies": {
-    "react": "^18"
+  "dependencies": {
+    "react": "^18.2.0"
   },
   "devDependencies": {
-    "typescript": "4.9.3",
-    "@types/react": "^18.0.22",
+    "typescript": "5.2.2",
+    "@types/react": "^18.2.28",
     "rimraf": "^3.0.2",
     "markdown-magic": "^2.6.1"
   },
