--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "dev": "next dev",
     "cypress": "next dev",
-    "build": "next build",
+    "build-next": "next build",
     "export": "next export",
-    "tsc": "tsc --build --verbose"
+    "build": "tsc --build --verbose"
   },
   "repository": {
     "type": "git",
@@ -23,23 +23,24 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "13.5.4",
-    "@next/mdx": "^12.1.5",
-    "@mdx-js/loader": "^2.1.1",
+    "next": "13.5.5",
+    "@next/mdx": "^13.5.5",
+    "@mdx-js/loader": "^2.3.0",
     "raw-loader": "~4.0.2",
-    "prism-react-renderer": "^1.3.5",
-    "@mui/material": "^5",
-    "@emotion/styled": "^11.10.4",
-    "@emotion/react": "^11.10.4",
-    "@react-typed-forms/core": "workspace:*",
-    "@react-typed-forms/mui": "workspace:*",
-    "@react-typed-forms/schemas": "workspace:*",
-    "@react-typed-forms/schemas-mui": "workspace:*"
+    "prism-react-renderer": "^2.1.0",
+    "@mui/material": "^5.14.13",
+    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.11.1",
+    "@react-typed-forms/core": "workspace:^*",
+    "@react-typed-forms/mui": "workspace:^*",
+    "@react-typed-forms/schemas": "workspace:^*",
+    "@react-typed-forms/schemas-mui": "workspace:^*"
   },
   "devDependencies": {
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
-    "@types/node": "^16.11.27",
-    "typescript": "4.9.3"
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
+    "@types/node": "^20.8.6",
+    "@types/mdx": "^2.0.8",
+    "typescript": "5.2.2"
   }
 }
