--- a/packages/mui/package.json
+++ b/packages/mui/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@react-typed-forms/mui",
-	"version": "3.0.0-dev.107",
+	"version": "3.0.0-dev.108",
 	"description": "",
 	"main": "lib/index.js",
 	"types": "lib/index.d.ts",
@@ -24,14 +24,11 @@
 		"material-ui"
 	],
 	"dependencies": {
-		"@react-typed-forms/core": "workspace:*"
-	},
-	"peerDependencies": {
-		"@mui/material": "^5"
+		"@react-typed-forms/core": "workspace:^*",
+		"@mui/material": "^5.14.13"
 	},
 	"devDependencies": {
-		"@mui/material": "^5",
-		"@types/react": "^18.0.22",
+		"@types/react": "^18.2.28",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"rimraf": "^3.0.2",
