--- a/packages/schemas-mui/package.json
+++ b/packages/schemas-mui/package.json
@@ -24,9 +24,9 @@
     "material-ui"
   ],
   "dependencies": {
-    "@react-typed-forms/core": "^3.0.0-dev",
-    "@react-typed-forms/mui": "^3.0.0-dev",
-    "@react-typed-forms/schemas": "workspace:*",
+    "@react-typed-forms/core": "workspace:^*",
+    "@react-typed-forms/mui": "workspace:^*",
+    "@react-typed-forms/schemas": "workspace:^*",
     "date-fns": "^2.29.3"
   },
   "peerDependencies": {
@@ -35,13 +35,13 @@
   },
   "devDependencies": {
     "@mui/icons-material": "^5",
-    "@mui/material": "^5",
-    "@types/react": "^18.0.22",
+    "@mui/material": "^5.14.13",
+    "@types/react": "^18.2.28",
     "nswag": "^13.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
-    "typescript": "4.9.3"
+    "typescript": "5.2.2"
   },
   "gitHead": "698e16cd3ab31b7dd0528fc76536f4d3205ce8c6",
   "scripts": {
