--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -24,10 +24,10 @@
     "material-ui"
   ],
   "dependencies": {
-    "@react-typed-forms/core": "^3.0.0-dev"
+    "@react-typed-forms/core": "workspace:^*"
   },
   "devDependencies": {
-    "@types/react": "^18.0.22",
+    "@types/react": "^18.2.28",
     "nswag": "^13.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
