--- a/packages/schemas-mui/package.json
+++ b/packages/schemas-mui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-typed-forms/schemas-mui",
-  "version": "1.0.0-dev.13",
+  "version": "1.0.0-dev.14",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -26,7 +26,7 @@
   "dependencies": {
     "@react-typed-forms/core": "workspace:^*",
     "@react-typed-forms/mui": "workspace:^*",
-    "@react-typed-forms/schemas": "workspace:^*",
+    "@react-typed-forms/schemas": "workspace:^1.0.0-dev.14",
     "date-fns": "^2.29.3"
   },
   "peerDependencies": {
