--- a/packages/mui/package.json
+++ b/packages/mui/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@react-typed-forms/mui",
-	"version": "3.0.0-dev.108",
+	"version": "3.0.0-dev.109",
 	"description": "",
 	"main": "lib/index.js",
 	"types": "lib/index.d.ts",
@@ -24,7 +24,7 @@
 		"material-ui"
 	],
 	"dependencies": {
-		"@react-typed-forms/core": "workspace:^*",
+		"@react-typed-forms/core": "workspace:^3.0.0-dev.109",
 		"@mui/material": "^5.14.13"
 	},
 	"devDependencies": {
