--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,17 +2,11 @@
   "name": "@react-typed-forms/core",
   "version": "3.0.0-dev.110",
   "description": "",
+  "source": "src/index.ts",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "exports": {
-    ".": "./lib/index.js",
-    "./html": {
-      "default": "./lib/html/index.js",
-      "types": "./lib/html/indx.d.ts"
-    }
-  },
   "scripts": {
-    "build": "rimraf ./lib/ && tsc",
+    "build": "rimraf lib/ && microbundle -f cjs --raw --no-compress --jsx React.createElement --jsxFragment React.Fragment",
     "watch": "tsc -w",
     "update-readme": "md-magic --path README.md --path ../../README.md"
   },
@@ -38,6 +32,8 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
+    "@react-typed-forms/transform": "workspace:^0.1.0",
+    "microbundle": "^0.15.1",
     "typescript": "5.2.2",
     "@types/react": "^18.2.28",
     "rimraf": "^3.0.2",
