--- a/packages/mui/package.json
+++ b/packages/mui/package.json
@@ -24,11 +24,17 @@
 		"material-ui"
 	],
 	"dependencies": {
-		"@react-typed-forms/core": "workspace:^3.0.0-dev.110",
-		"@mui/material": "^5.14.13"
+		"@mui/material": "^5.14.13",
+		"@react-typed-forms/core": "workspace:^3.0.0-dev.109"
+	},
+	"peerDependencies": {
+		"react": "18.x",
+		"react-dom": "18.x"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.28",
+		"microbundle": "^0.15.1",
+		"@react-typed-forms/transform": "workspace:^0.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"rimraf": "^3.0.2",
@@ -36,7 +42,7 @@
 	},
 	"gitHead": "698e16cd3ab31b7dd0528fc76536f4d3205ce8c6",
 	"scripts": {
-		"build": "rimraf ./lib/ && tsc",
+		"build": "rimraf ./lib/ && microbundle -f cjs --no-compress --jsx React.createElement --jsxFragment React.Fragment",
 		"watch": "tsc -w"
 	}
 }
