--- a/packages/mui/tsconfig.json
+++ b/packages/mui/tsconfig.json
@@ -1,19 +1,20 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ESNext",
     "outDir": "lib",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
+    "noEmit": true,
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "esModuleInterop": true,
-    "module": "CommonJS",
+    "module": "ESNext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react"
+    "jsx": "preserve"
   },
   "include": ["src/*.ts", "src/*.tsx"],
   "exclude": ["node_modules", "lib"]
