--- a/packages/schemas-mui/package.json
+++ b/packages/schemas-mui/package.json
@@ -27,6 +27,7 @@
     "@react-typed-forms/core": "workspace:^*",
     "@react-typed-forms/mui": "workspace:^*",
     "@react-typed-forms/schemas": "workspace:^1.0.0-dev.15",
+    "@react-typed-forms/transform": "workspace:^0.1.0",
     "date-fns": "^2.29.3"
   },
   "peerDependencies": {
@@ -34,6 +35,7 @@
     "@mui/material": "^5"
   },
   "devDependencies": {
+    "microbundle": "^0.15.1",
     "@mui/icons-material": "^5",
     "@mui/material": "^5.14.13",
     "@types/react": "^18.2.28",
@@ -45,7 +47,7 @@
   },
   "gitHead": "698e16cd3ab31b7dd0528fc76536f4d3205ce8c6",
   "scripts": {
-    "build": "rimraf ./lib/ && tsc",
+    "build": "rimraf ./lib/ && microbundle -f cjs --jsx React.createElement --jsxFragment React.Fragment",
     "watch": "tsc -w"
   }
 }
