--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -28,6 +28,8 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.28",
+    "@react-typed-forms/transform": "workspace:^0.1.0",
+    "microbundle": "^0.15.1",
     "nswag": "^13.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,7 +37,7 @@
   },
   "gitHead": "698e16cd3ab31b7dd0528fc76536f4d3205ce8c6",
   "scripts": {
-    "build": "rimraf ./lib/ && tsc",
+    "build": "rimraf ./lib/ && microbundle -f cjs --no-compress --jsx React.createElement --jsxFragment React.Fragment",
     "watch": "tsc -w",
     "gencode": "nswag swagger2tsclient /input:http://localhost:5216/swagger/v1/swagger.json /runtime:Net60 /output:src/types.ts /GenerateClientClasses:false /MarkOptionalProperties:false /Template:Fetch /TypeStyle:Interface /DateTimeType:string"
   }
