--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -31,10 +31,10 @@
     "@mui/material": "^5.14.13",
     "@emotion/styled": "^11.11.0",
     "@emotion/react": "^11.11.1",
-    "@react-typed-forms/core": "workspace:^*",
-    "@react-typed-forms/mui": "workspace:^*",
-    "@react-typed-forms/schemas": "workspace:^1.0.0-dev.15",
-    "@react-typed-forms/schemas-mui": "workspace:^1.0.0-dev.15"
+    "@react-typed-forms/core": "workspace:^3.0.0-dev.111",
+    "@react-typed-forms/mui": "workspace:^3.0.0-dev.111",
+    "@react-typed-forms/schemas": "workspace:^1.0.0-dev.16",
+    "@react-typed-forms/schemas-mui": "workspace:^1.0.0-dev.16"
   },
   "devDependencies": {
     "@react-typed-forms/transform": "workspace:^0.1.0",
