--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-typed-forms/schemas",
-  "version": "1.0.0-dev.16",
+  "version": "1.0.0-dev.17",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -24,15 +24,14 @@
     "material-ui"
   ],
   "dependencies": {
-    "@react-typed-forms/core": "workspace:^3.0.0-dev.111"
+    "@react-typed-forms/core": "workspace:^3.0.0-dev.111",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@react-typed-forms/transform": "workspace:^0.1.0",
     "@types/react": "^18.2.28",
     "microbundle": "^0.15.1",
     "nswag": "^13.18.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "rimraf": "^3.0.2"
   },
   "gitHead": "698e16cd3ab31b7dd0528fc76536f4d3205ce8c6",
