--- a/packages/schemas-mui/package.json
+++ b/packages/schemas-mui/package.json
@@ -41,9 +41,9 @@
     "@types/react": "^18.2.28",
     "microbundle": "^0.15.1",
     "nswag": "^13.18.2",
+    "prettier": "^3.0.3",
     "rimraf": "^3.0.2",
-    "typescript": "5.2.2",
-    "prettier": "^3.0.3"
+    "typescript": "5.2.2"
   },
   "gitHead": "698e16cd3ab31b7dd0528fc76536f4d3205ce8c6",
   "scripts": {
