New renderer working

--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -32,6 +32,7 @@
     "@emotion/styled": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "jsonata": "^2.0.4",
+    "clsx": "^1 || ^2",
     "@react-typed-forms/core": "workspace:^3.0.0-dev.117",
     "@react-typed-forms/mui": "workspace:^3.0.1-dev.1",
     "@react-typed-forms/schemas": "workspace:^1.0.0-dev.24",
