--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-typed-forms/schemas",
-  "version": "5.0.3",
+  "version": "5.1.0",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -24,7 +24,7 @@
     "material-ui"
   ],
   "dependencies": {
-    "@react-typed-forms/core": "workspace:^3.0.0-dev.117",
+    "@react-typed-forms/core": "^3.0.0",
     "clsx": "^1 || ^2",
     "jsonata": "^2.0.4",
     "react": "^18.2.0"
