Add functions for collecting changes

--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -35,8 +35,8 @@
     "clsx": "^1 || ^2",
     "@react-typed-forms/core": "workspace:^3.0.0",
     "@react-typed-forms/mui": "workspace:^3.0.2",
-    "@react-typed-forms/schemas": "workspace:^7.0.0",
-    "@react-typed-forms/schemas-mui": "workspace:^4.0.0"
+    "@react-typed-forms/schemas": "^7.2.0",
+    "@react-typed-forms/schemas-mui": "^5.0.0"
   },
   "devDependencies": {
     "@react-typed-forms/transform": "workspace:^0.2.0",
