--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -13,7 +13,7 @@
     "clsx": "^2.0.0",
     "@tailwindcss/forms": "^0.5.7",
     "@react-typed-forms/core": "workspace:*",
-    "@react-typed-forms/schemas": "workspace:*",
+    "@react-typed-forms/schemas": "^7.2.0",
     "@react-typed-forms/mui": "workspace:*",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
