--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -14,10 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "outDir": "lib",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "outDir": "lib"
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "lib"]
