--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-typed-forms/core",
-  "version": "3.6.4",
+  "version": "4.0.0-dev-0",
   "description": "",
   "source": "src/index.ts",
   "main": "lib/index.js",
@@ -31,10 +31,12 @@
     "forms"
   ],
   "peerDependencies": {
-    "react": "^18"
+    "react": "^18",
+    "@astroapps/controls": "workspace:^1.0.0"
   },
   "devDependencies": {
     "@react-typed-forms/transform": "workspace:^0.2.0",
+    "@astroapps/controls": "workspace:^1.0.0",
     "@types/react": "^18.2.28",
     "markdown-magic": "^2.6.1",
     "microbundle": "^0.15.1",
