Move the components for no warnings

--- a/packages/core/.babelrc
+++ b/packages/core/.babelrc
@@ -1,5 +1,5 @@
 
 {
   "plugins": [
-    ["module:@react-typed-forms/transform", {"importSource": "@/react-hooks"}]]
+    ["module:@react-typed-forms/transform", {"importSource": "./hooks"}]]
 }
