--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -49,7 +49,7 @@
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "rimraf": "^3.0.2",
-    "typescript": "5.2.2",
+    "typescript": "^5.2.2",
     "ts-jest": "^29.2.5",
     "jest": "^29.7.0",
     "tsx": "^4.19.1",
