--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -29,14 +29,16 @@
     "raw-loader": "~4.0.2",
     "prism-react-renderer": "^2.1.0",
     "@mui/material": "^5.14.13",
+    "@mui/icons-material": "^5",
     "@emotion/styled": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "jsonata": "^2.0.4",
-    "clsx": "^1 || ^2",
-    "@react-typed-forms/core": "workspace:^3.0.0",
-    "@react-typed-forms/mui": "workspace:^3.0.2",
-    "@react-typed-forms/schemas": "^11.11.1",
-    "@react-typed-forms/schemas-mui": "^6.1.1"
+    "clsx": "^2.0.0",
+    "@react-typed-forms/core": "workspace:^*",
+    "@react-typed-forms/mui": "workspace:*",
+    "@react-typed-forms/schemas": "^13.5.3",
+    "@react-typed-forms/schemas-html": "^1.4.2",
+    "@react-typed-forms/schemas-mui": "^8.0.0"
   },
   "devDependencies": {
     "@react-typed-forms/transform": "workspace:^0.2.0",
@@ -44,13 +46,13 @@
     "@types/react-dom": "^18.2.13",
     "@types/node": "^20.8.6",
     "@types/mdx": "^2.0.8",
-    "typescript": "5.2.2",
+    "typescript": "^5.2.2",
     "prettier": "^3.0.3",
-    "autoprefixer": "10.4.16",
-    "postcss": "8.4.31",
-    "tailwindcss": "3.3.3",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.6",
-    "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/forms": "^0.5.7",
     "tailwind-datepicker-react": "1.4.3"
   }
 }
