--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -7,13 +7,13 @@
     "build": "storybook build"
   },
   "dependencies": {
-    "next": "14.1.4",
+    "next": "^14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "clsx": "^2.0.0",
     "@tailwindcss/forms": "^0.5.7",
-    "@react-typed-forms/core": "workspace:*",
-    "@react-typed-forms/schemas": "^7.2.0",
+    "@react-typed-forms/core": "workspace:^*",
+    "@react-typed-forms/schemas": "^13.5.3",
     "@react-typed-forms/mui": "workspace:*",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -31,14 +31,14 @@
     "@storybook/preview-api": "^8.0.5",
     "@storybook/theming": "^8.0.5",
     "@storybook/manager-api": "^8.0.5",
-    "@types/node": "^20",
+    "@types/node": "^20.8.6",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-storybook": "^0.6.15",
-    "postcss": "^8",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "storybook": "^8.0.5",
     "tailwindcss": "^3.4.1",
